--- a/templates/enduro.service.j2
+++ b/templates/enduro.service.j2
@@ -12,3 +12,5 @@ SyslogIdentifier=EnduroStdout
 SyslogFacility=local1
 ExecStart=/usr/local/bin/enduro --config /etc/enduro.toml
 
+[Install]
+WantedBy=multi-user.target
