Add OS conditional to cadence systemd file

--- a/templates/cadence.service.j2
+++ b/templates/cadence.service.j2
@@ -1,6 +1,10 @@
 [Unit]
 Description=Cadence
+{% if ansible_os_family == "Debian" %}
+After=mysql.service
+{% else %}
 After=mysqld.service
+{% endif %}
 
 [Service]
 Type=simple
